examples/test/testpolicy11837.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11837
  namespace: namespace95
spec:
  podSelector:
    matchLabels:
      key28: value22
      key13: value4
      key31: value8
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key32: value27
      podSelector:
        matchLabels:
          key24: value48
          key45: value22
          key2: value32
